--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
-    "expo": "39.0.2",
-    "expo-camera": "~9.0.0",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^42.0.0",
+    "expo-camera": "~11.2.2",
+    "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.62.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-color-wheel": "^0.1.7",
     "react-native-custom-picker": "^0.4.0",
     "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-screens": "~2.10.1",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
